2008-05-07  Mario Torre  <neugens@aicas.com>

	* gnu/java/awt/peer/x/XEventPump.java (handleEvent): xEvent.code is now
	masked to identify and react to syntetic events.
	Added UnmapNotify, DestroyNotify and ClientMessage to the list of event
	handled.
	* gnu/java/awt/peer/x/XFramePeer.java (getState): initial implementation.
	* gnu/java/awt/peer/x/XGraphics2D.java (setPaint): fix NPE, this is a
	workaround, the code have to be fixed in a better way.
	* gnu/java/awt/peer/x/XWindowPeer.java (getXwindow): new method to allow
	access to the underling xwindow.
	(standardSelect): add more events for notification.
	(XWindowPeer): call set_wm_delete_window to ask the WM to notify us
	when a delete event occur.

2008-05-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/21869
	* tools/gnu/classpath/tools/jar/Indexer.java,
	* tools/gnu/classpath/tools/javah/JniHelper.java,
	* tools/gnu/classpath/tools/native2ascii/Native2ASCII.java,
	* tools/gnu/classpath/tools/orbd/PersistentMap.java,
	* tools/gnu/classpath/tools/rmic/ClassRmicCompiler.java,
	* tools/gnu/classpath/tools/rmic/Generator.java,
	* tools/gnu/classpath/tools/rmic/MethodGenerator.java,
	* tools/gnu/classpath/tools/rmic/RmiMethodGenerator.java,
	* tools/gnu/classpath/tools/rmic/SourceGiopRmicCompiler.java,
	* tools/gnu/classpath/tools/rmic/SourceRmicCompiler.java:
	Swap use of StringBuffer for StringBuilder.

2008-05-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/21869
	* javax/swing/AbstractButton.java,
	* javax/swing/JButton.java,
	* javax/swing/JComboBox.java,
	* javax/swing/JComponent.java,
	* javax/swing/JDesktopPane.java,
	* javax/swing/JFileChooser.java,
	* javax/swing/JFrame.java,
	* javax/swing/JLabel.java,
	* javax/swing/JList.java,
	* javax/swing/JMenuBar.java,
	* javax/swing/JPopupMenu.java,
	* javax/swing/JProgressBar.java,
	* javax/swing/JScrollBar.java,
	* javax/swing/JSlider.java,
	* javax/swing/JSplitPane.java,
	* javax/swing/JTabbedPane.java,